comit realizado para probar funcionamiento

--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
                   <a class="nav-link" href="./index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./paginas/como-funciona.html"> Como Funciona </a>
+                  <a class="nav-link" href="./paginas/como-funciona.html"> Cómo funciona </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./paginas/precio.html">Precio </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./paginas/lo-mas-pedido.html"> Lo Mas Pedido </a>
+                  <a class="nav-link" href="./paginas/lo-mas-pedido.html"> Lo más pedido </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./paginas/formulario.html">Tu Pedido Aca</a>
+                  <a class="nav-link" href="./paginas/formulario.html">Tu pedido acá</a>
                 </li>
               </ul>
               <div class="user_option">
@@ -97,10 +97,10 @@
                         lo bajo por ti
                       </h1>
                       <p>
-                        Descargamos por ti los contenidos digitales de tu preferencia.
+                        Descargamos por tí los contenidos digitales de tu preferencia.
                       </p>
                       <div class="">
-                        <a class="nav-link" href="./paginas/formulario.html">Tu Pedido Aca</a>
+                        <a class="nav-link" href="./paginas/formulario.html">Tu Pedido Acá</a>
                         </a>
                       </div>
                     </div>
@@ -120,10 +120,10 @@
                         tiene que bajar
                       </h1>
                       <p>
-                        Directamente del ciberespacio a tu dispositivo favorito
+                        Directamente del cyber-espacio a tu dispositivo favorito.
                       </p>
                       <div class="">
-                        <a class="nav-link" href="./paginas/formulario.html">Tu Pedido Aca</a>
+                        <a class="nav-link" href="./paginas/formulario.html">Tu pedido acá</a>
                       </div>
                     </div>
                   </div>
@@ -139,13 +139,13 @@
                         sin publicidad
                       </h2>
                       <h1>
-                        rapido facil comodo
+                        rápido, fácil, comodo
                       </h1>
                       <p>
-                        sin suscripciones - paga solo por el contenido que quieras ver, escuchar, jugar, etc.
+                        Sin suscripciones, paga sólo por el contenido que quieras ver, escuchar, jugar, etc.
                       </p>
                       <div class="">
-                        <a class="nav-link" href="./paginas/formulario.html">Tu Pedido Aca</a>
+                        <a class="nav-link" href="./paginas/formulario.html">Tu pedido acá</a>
                         </a>
                       </div>
                     </div>
@@ -168,7 +168,7 @@
           Como Funciona
         </h2>
         <p>
-          Descargamos por ti el o los contenidos digitales de tu preferencia. <br>Sin suscripciones - pagas solo por el
+          Descargamos por ti el o los contenidos digitales de tu preferencia. <br>Sin suscripciones, pagas solo por el
           contenido que quieras ver, escuchar, jugar, etc. <br>El contenido es tuyo para siempre.
         </p>
       </div>
