--- a/paginas/formulario.html
+++ b/paginas/formulario.html
@@ -46,16 +46,16 @@
                   <a class="nav-link" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./como-funciona.html"> Como Funciona </a>
+                  <a class="nav-link" href="./como-funciona.html"> Cómo funciona </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./precio.html"> Precio </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./lo-mas-pedido.html"> Lo Mas Pedido </a>
+                  <a class="nav-link" href="./lo-mas-pedido.html"> Lo más pedido </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./formulario.html">Tu Pedido Aca</a>
+                  <a class="nav-link" href="./formulario.html">Tu pedido acá</a>
                 </li>
               </ul>
               <div class="user_option">
@@ -79,7 +79,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          realiza tu pedido aca
+          realiza tu pedido acá
         </h2>
       </div>
       <div class="">
@@ -89,7 +89,7 @@
               <div class="contact-form">
                 <form action="">
                   <div>
-                    <input type="text" placeholder="Full Name ">
+                    <input type="text" placeholder="Name ">
                   </div>
                   <div>
                     <input type="text" placeholder="Phone Number">
