--- a/paginas/precio.html
+++ b/paginas/precio.html
@@ -47,16 +47,16 @@
                   <a class="nav-link" href="../index.html">Inicio </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./como-funciona.html"> Como Funciona </a>
+                  <a class="nav-link" href="./como-funciona.html"> Cómo funciona </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./precio.html"> Precio </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./lo-mas-pedido.html"> Lo Mas Pedido </a>
+                  <a class="nav-link" href="./lo-mas-pedido.html"> Lo más pedido </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./formulario.html">Tu Pedido Aca</a>
+                  <a class="nav-link" href="./formulario.html">Tu pedido acá</a>
                 </li>
               </ul>
               <div class="user_option">
