--- a/paginas/como-funciona.html
+++ b/paginas/como-funciona.html
@@ -48,16 +48,16 @@
                   <a class="nav-link" href="../index.html">Inicio </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./como-funciona.html"> Como Funciona </a>
+                  <a class="nav-link" href="./como-funciona.html"> Cómo funciona </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./precio.html"> Precio </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./lo-mas-pedido.html"> Lo Mas Pedido </a>
+                  <a class="nav-link" href="./lo-mas-pedido.html"> Lo más pedido </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./formulario.html">Tu Pedido Aca</a>
+                  <a class="nav-link" href="./formulario.html">Tu pedido acá</a>
                 </li>
               </ul>
               <div class="user_option">
@@ -104,7 +104,7 @@
             </svg>          </div>
           <div class="detail-box">
             <h6>
-              Te diremos el <br>precio y <br>tiempo de envio
+              Te diremos el <br>precio y <br>tiempo de envío
             </h6>
           </div>
         </div>
@@ -126,7 +126,7 @@
             </svg>          </div>
           <div class="detail-box">
             <h6>
-              Escoge donde <br>te enviamos <br>tu pedido
+              Escoge dónde <br>enviamos <br>tu pedido
             </h6>
           </div>
         </div>
