--- a/paginas/lo-mas-pedido.html
+++ b/paginas/lo-mas-pedido.html
@@ -46,16 +46,16 @@
                   <a class="nav-link" href="../index.html">Inicio </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./como-funciona.html"> Como Funciona </a>
+                  <a class="nav-link" href="./como-funciona.html"> Cómo funciona </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./precio.html"> Precio </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./lo-mas-pedido.html"> Lo Mas Pedido </a>
+                  <a class="nav-link" href="./lo-mas-pedido.html"> Lo más pedido </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./formulario.html">Tu Pedido Aca</a>
+                  <a class="nav-link" href="./formulario.html">Tu pedido acá</a>
                 </li>
               </ul>
               <div class="user_option">
@@ -91,7 +91,7 @@
       </div>
       <div class="categoria">
         <img src="../images/vico.jpeg" alt="">
-        <h3>Vico C <br>discografia</h3>
+        <h3>Vico C <br>Discografía</h3>
       </div>
     </div>
 </div>
