trabajé el título página lo más pedido. trabajé el estilo de titulo página lo más visto. trabajé responsive 360 y 380, funciona al 100%

--- a/paginas/lo-mas-pedido.html
+++ b/paginas/lo-mas-pedido.html
@@ -76,7 +76,13 @@
 
   <!-- who section -->
   <section id="categoriasDestacadas">
+    <div class="heading_container">
+      <h2>
+        Lo más pedido
+      </h2>
+    </div>
     <div class="contenedor-categorias">
+      
       <a href="./paginas/categoria.html" class="categoria">
         <img src="../images/House2.jpg" alt="">
         <h3>Dr House</h3>
