trabajé con cambio imagen menú hamburguesa

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         Directamente del cyber-espacio a tu dispositivo favorito.
                       </p>
                       <div class="">
-                        <a class="nav-link" href="./paginas/formulario.html">Tu pedido acá</a>
+                        <a class="nav-link" href="./paginas/formulario.html">Tu Pedido Acá</a>
                       </div>
                     </div>
                   </div>
@@ -139,13 +139,13 @@
                         sin publicidad
                       </h2>
                       <h1>
-                        rápido, fácil, comodo
+                        rápido, fácil, cómodo
                       </h1>
                       <p>
                         Sin suscripciones, paga sólo por el contenido que quieras ver, escuchar, jugar, etc.
                       </p>
                       <div class="">
-                        <a class="nav-link" href="./paginas/formulario.html">Tu pedido acá</a>
+                        <a class="nav-link" href="./paginas/formulario.html">Tu Pedido Acá</a>
                         </a>
                       </div>
                     </div>
