puse etiqueta <br> para texto en footer

--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      &copy; 2024 All Rights Reserved By Juan Pablo Pereira
+      &copy; 2024 All Rights Reserved By <br>Juan Pablo Pereira
     </p>
   </section>
   <!-- footer section -->
