--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          tu pedido aca
+          tu pedido acá
         </h2>
       </div>
       <div class="">
